**v0.3.25a** * Fixed bug which was causing actions menu icon to appear outside container * Centred notifications badge for two digit numbers * Prevented multiple submissions of work orders * Left aligned all elements in profile menu

--- a/client/stylesheets/globals/badgets_labels.import.less
+++ b/client/stylesheets/globals/badgets_labels.import.less
@@ -24,13 +24,14 @@
 .label.label-notification, .badge-notification {
   position: relative;
   border-radius: 50%;
-  padding: 3px 5px;  
-  background-color:#E91E63;
-  color:#fff;
-  height:15px;
-  width:15px;
-  line-height:10px;
-  float:right;
+  padding:0;
+  background-color: #E91E63;
+  color: #fff;
+  height: 17px;
+  width: 17px;
+  line-height: 17px;
+  float: right;
+  font-size: 9px;
 }
 
 .priority-Scheduled {
