--- a/client/stylesheets/globals/base.import.less
+++ b/client/stylesheets/globals/base.import.less
@@ -354,11 +354,11 @@ body.body-small .footer.fixed {
 
 .link-block {
   font-size: 12px;
-  padding: 10px;
+  padding: 10px 10px 10px 23px
 }
 
 .nav.navbar-top-links .link-block a {
-  font-size: 12px;
+  font-size: 12px;  
 }
 
 .link-block a {
