--- a/client/views/Dashboard/iBox/iBox.css
+++ b/client/views/Dashboard/iBox/iBox.css
@@ -1,3 +1,4 @@
 .md-skin .ibox {
 	background-color:#fff;
+	position:relative;
 }
